fix spacing v2

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ header {
 }
 
 .margin {
-  margin-top: 9rem;
+  margin-top: 25vh;
 }
 
 .text-justify {
